add ipython tests; allow to create configs in ipython; fix relative paths for @config; add args/kwargs overlap exception test; Updated README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dev = [
     "ruff",
     "numpy",  # for examples
     "twine>=6.1.0",
-    "build>=1.2.2.post1"
+    "build>=1.2.2.post1",
+    "ipython",  # for tests
 ]
 
 [project.urls]
