--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ select = [
 "__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
 
 [tool.ruff.format]
-quote-style = "double"
+quote-style = "single"
 indent-style = "space"
 
 [tool.pytest.ini_options]
