--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,35 +16,39 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        enable-cache: true
+
+    - name: Set up Python
+      run: uv venv --python ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        uv pip install -e ".[dev]"
 
     - name: Test with pytest
       run: |
-        pytest tests/ -v --tb=short
+        uv run pytest tests/ -v --tb=short
 
   lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: "3.10"
+        enable-cache: true
+
+    - name: Set up Python
+      run: uv venv --python 3.10
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install ruff
+        uv pip install ruff
 
     - name: Lint with ruff
       run: |
-        ruff check .
+        uv run ruff check .
