--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release
 
 on:
+  push:
+    tags:
+      - 'v*'
   release:
     types: [created, published]
 
@@ -8,7 +11,7 @@ jobs:
   build:
     name: Build package
     runs-on: ubuntu-latest
-    if: github.event.action == 'created'
+    if: startsWith(github.ref, 'refs/tags/')
     
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +32,7 @@ jobs:
     name: Attach to release
     runs-on: ubuntu-latest
     needs: build
-    if: github.event.action == 'created'
+    if: github.event_name == 'release' && github.event.action == 'created'
     
     steps:
       - uses: actions/download-artifact@v4
@@ -51,7 +54,7 @@ jobs:
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    if: github.event.action == 'published'
+    if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
       - uses: actions/checkout@v4
@@ -63,6 +66,6 @@ jobs:
       - name: Build source distribution
         run: uv build --sdist
 
-      # - name: Publish to PyPI
-      #   run: |
-      #     uv publish --token ${{ secrets.PYPI_API_TOKEN }}
+      - name: Publish to PyPI
+        run: |
+          uv publish --token ${{ secrets.PYPI_API_TOKEN }}
